--- a/부산발할로윈행방문예약폼.html
+++ b/부산발할로윈행방문예약폼.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>교통데이 행사 예약폼 - 고급</title>
+    <title>[교통-DAY] : 부산발 할로윈행 방문 예약폼</title>
     <!-- 부트스트랩 CSS 링크 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -276,4 +276,5 @@
         });
     </script>
 </body>
+
 </html>
