--- a/소개.html
+++ b/소개.html
@@ -72,10 +72,10 @@
     <!-- 히어로 섹션 시작 -->
     <header class="hero-section">
         <div class="container">
-            <h1 class="display-3">주인님의 환상적인 웹사이트에 오신 것을 환영합니다!</h1>
+            <h1 class="display-3">교통-DAY의 환상적인 웹사이트에 오신 것을 환영합니다!</h1>
             <p class="lead">
-                방문자님을 사로잡을 멋진 메시지로 웹사이트의 가치를 전달하세요.
-                여기에 웹사이트의 핵심 가치나 목표를 간결하게 표현할 수 있습니다.
+             교통 덕질 비영리 단체, 교통-DAY입니다.
+             대표: 교통덕후 곰돌맨 @Bearman_ENTP
             </p>
             <a href="#" class="btn btn-primary btn-lg">지금 시작하기</a>
             <!-- CTA 버튼 -->
@@ -94,3 +94,4 @@
 </body>
 
 </html>
+
