--- a/소개.html
+++ b/소개.html
@@ -37,7 +37,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">교통-DAY</a>
+            <a class="navbar-brand" href="index.html">교통-DAY</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,10 +48,10 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            서비스
+                            방문 예약
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">서비스 1</a></li>
+                            <li><a class="dropdown-item" href="부산발할로윈행방문예약폼.html">부산발 할로윈행</a></li>
                             <li><a class="dropdown-item" href="#">서비스 2</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">기타 서비스</a></li>
@@ -94,4 +94,5 @@
 </body>
 
 </html>
+
 
