--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                             <li><a class="dropdown-item" href="#">기타 서비스</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kbob.kro.kr">급식줄알리미</a>
+                    </li>
                 </ul>
+                
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">검색</button>
@@ -101,3 +105,4 @@
 </body>
 
 </html>
+
