--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kbob.kro.kr">급식줄알리미</a>
+                        <a class="nav-link" href="https://kbob.kro.kr">급식줄알리미</a>
                     </li>
                 </ul>
                 
@@ -105,4 +105,5 @@
 </body>
 
 </html>
+
 
