--- a/index.html
+++ b/index.html
@@ -1,133 +1,77 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>교통-DAY: 교통덕후들을 위한 행사</title>
-    <!-- 부트스트랩 CSS 링크 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!-- Bootstrap Icons (아이콘 사용을 위해 추가) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- 커스텀 CSS (기존 스타일 유지 및 행사 분위기 추가) -->
-    <style>
-        /* 히어로 섹션 스타일 */
-        .hero-section {
-            /* 교통-DAY 분위기에 맞게 배경 이미지를 교통 관련 이미지로 변경해주세요! */
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://via.placeholder.com/1920x1080/4682B4/FFFFFF?text=Traffic-DAY+Event') no-repeat center center;
-            background-size: cover;
-            background-position: center;
-            color: white;
-            padding: 120px 0; /* 패딩 좀 더 늘려서 웅장하게 */
-            text-align: center;
-        }
-        .hero-section h1 {
-            font-size: 4.5rem; /* 제목 크게 */
-            margin-bottom: 25px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.7); /* 제목 그림자 */
-        }
-        .hero-section p {
-            font-size: 1.5rem; /* 문구도 크게 */
-            margin-bottom: 50px;
-            max-width: 900px;
-            margin-left: auto;
-            margin-right: auto;
-            text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-        }
-        .hero-section .btn {
-            font-size: 1.8rem; /* 버튼 더 크게 */
-            padding: 18px 35px;
-            border-radius: 50px;
-            transition: all 0.3s ease; /* 호버 효과 */
-        }
-        .hero-section .btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-        }
-
-        /* 공통 섹션 패딩 */
-        .section-padding {
-            padding: 80px 0;
-        }
-        /* 이벤트 소개 섹션 */
-        .event-intro {
-            background-color: #f8f9fa;
-        }
-        /* 주요 프로그램 섹션 */
-        .program-card {
-            border: none;
-            box-shadow: 0 0 20px rgba(0,0,0,0.05);
-            transition: all 0.3s ease;
-        }
-        .program-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 25px rgba(0,0,0,0.1);
-        }
-        .program-card .card-icon {
-            font-size: 3rem;
-            color: #007bff;
-            margin-bottom: 15px;
-        }
-        /* 참여 안내 섹션 */
-        .cta-section {
-            background-color: #007bff;
-            color: white;
-            padding: 100px 0;
-            text-align: center;
-        }
-        .cta-section h2 {
-            font-size: 3rem;
-            margin-bottom: 30px;
-        }
-        .cta-section .btn {
-            font-size: 1.5rem;
-            padding: 15px 40px;
-            border-radius: 30px;
-            background-color: white;
-            color: #007bff;
-            border: none;
-        }
-        .cta-section .btn:hover {
-            background-color: #e2e6ea;
-        }
-
-        /* 푸터 */
-        footer {
-            padding: 40px 0;
-            background-color: #343a40;
-            color: #adb5bd;
-            text-align: center;
-            font-size: 0.9rem;
-        }
-        footer a {
-            color: #adb5bd;
-            text-decoration: none;
-        }
-        footer a:hover {
-            color: white;
-        }
-    </style>
+    <!-- ... 기존 head 내용 ... -->
 </head>
 <body>
+    <!-- 깃허브 코드 내용에서 최대한 바꾸지 않기 위해, 스크립트 위치만 옮겼습니다 -->
+    <script>
+      // **여기에 위에서 복사한 배포된 Apps Script 웹 앱의 "/exec" URL을 붙여넣으세요!**
+      const APPS_SCRIPT_API_URL = 'https://script.google.com/macros/s/AKfycbyKZYIL9xSwe-KVA09QONAeqMXMVoqboSnhY709NpU8lqld-di0qYMxToN9ZcCU32qm/exec'; // 예: 'https://script.google.com/macros/s/AKfyc.../exec'
+
+      function navigateTo(page, params = '') {
+          let url = 'https://sgwcrong.github.io/trafficday/'; 
+          switch (page) {
+              case 'index':
+                  url += 'index.html';
+                  break;
+              case 'about':
+                  url += 'about.html';
+                  break;
+              case 'login_signup':
+                  url += 'login_signup.html';
+                  break;
+              case 'mypage':
+                  url += 'mypage.html';
+                  break;
+              case 'admin':
+                  url += 'admin.html';
+                  break;
+              default:
+                  console.error('알 수 없는 페이지:', page);
+                  return;
+          }
+          if (params) {
+              url += '?' + params; 
+          }
+          window.location.href = url;
+      }
+
+      async function callAppsScript(functionName, data = {}) {
+          try {
+              const response = await fetch(APPS_SCRIPT_API_URL, {
+                  method: 'POST',
+                  headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ functionName, data })
+              });
+              return await response.json();
+          } catch (error) {
+              console.error('Apps Script API 호출 중 오류 발생:', error);
+              throw new Error('서버와 통신하는 중 오류가 발생했습니다. (' + error.message + ')');
+          }
+      }
+    </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">교통-DAY</a>
+            <a class="navbar-brand" href="javascript:void(0)" onclick="navigateTo('index')">교통-DAY</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">홈</a>
+                        <a class="nav-link active" aria-current="page" href="javascript:void(0)" onclick="navigateTo('index')">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">소개</a>
+                        <a class="nav-link" href="javascript:void(0)" onclick="navigateTo('about')">소개</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             행사 정보
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#program">주요 프로그램</a></li>
+                            <!-- 드롭다운 메뉴 내 섹션 이동은 #앵커 방식 유지 -->
+                            <li><a class="dropdown-item" href="#program">주요 프로그램</a></li> 
                             <li><a class="dropdown-item" href="#location">장소 및 시간</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">교통-DAY 웹툰</a></li>
@@ -138,19 +82,15 @@
                     </li>
                 </ul>
                 <div class="d-flex" id="authButtons">
-                    <!-- 로그인 상태에 따라 버튼이 여기에 동적으로 추가/제거됩니다. -->
-                    <!-- 로그인, 회원가입 버튼 -->
-                    <button id="loginBtn" class="btn btn-outline-light me-2">로그인</button>
-                    <button id="signupBtn" class="btn btn-primary">회원가입</button>
-                    <!-- 마이페이지, 로그아웃 버튼 (숨겨져 있다가 로그인 시 나타남) -->
-                    <button id="mypageBtn" class="btn btn-outline-light me-2 d-none">마이페이지</button>
+                    <button id="loginBtn" class="btn btn-outline-light me-2" onclick="navigateTo('login_signup')">로그인</button>
+                    <button id="signupBtn" class="btn btn-primary" onclick="navigateTo('login_signup', 'tab=register')">회원가입</button>
+                    <button id="mypageBtn" class="btn btn-outline-light me-2 d-none" onclick="navigateTo('mypage')">마이페이지</button>
                     <button id="logoutBtn" class="btn btn-danger d-none">로그아웃</button>
                 </div>
             </div>
         </div>
     </nav>
 
-    <!-- 히어로 섹션: 교통-DAY 행사 소개 -->
     <header class="hero-section">
         <div class="container">
             <h1 class="display-3">교통-DAY: 교통덕후들을 위한 성대한 축제!</h1>
@@ -158,11 +98,10 @@
                 기차, 버스, 지하철... 이 모든 것을 사랑하는 당신을 위한 단 하루의 특별한 행사!
                 다양한 체험과 정보, 그리고 교통덕후 친구들을 만나보세요!
             </p>
-            <a href="login_signup.html?tab=register" class="btn btn-primary btn-lg">지금 바로 참여하기</a>
+            <a href="javascript:void(0)" onclick="navigateTo('login_signup', 'tab=register')" class="btn btn-primary btn-lg">지금 바로 참여하기</a>
         </div>
     </header>
 
-    <!-- 이벤트 소개 섹션 -->
     <section id="about" class="event-intro section-padding">
         <div class="container">
             <div class="row align-items-center">
@@ -180,13 +119,12 @@
                         다채로운 프로그램들이 여러분을 기다립니다. 
                         교통의 세계에 푹 빠져들 준비되셨나요?
                     </p>
-                    <a href="about.html" class="btn btn-outline-primary mt-3">더 자세히 알아보기 <i class="bi bi-arrow-right"></i></a>
+                    <a href="javascript:void(0)" onclick="navigateTo('about')" class="btn btn-outline-primary mt-3">더 자세히 알아보기 <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- 주요 프로그램 섹션 -->
     <section id="program" class="section-padding">
         <div class="container">
             <h2 class="text-center mb-5 fw-bold">주요 프로그램</h2>
@@ -220,21 +158,19 @@
                 </div>
             </div>
             <div class="text-center mt-4">
-                <a href="#" class="btn btn-info btn-lg">모든 프로그램 확인하기</a>
+                <a href="#" class="btn btn-info btn-lg">모든 프로그램 확인하기</a> <!-- 이 링크는 일단 # 유지 -->
             </div>
         </div>
     </section>
 
-    <!-- 참여 안내 (CTA) 섹션 -->
     <section class="cta-section">
         <div class="container">
             <h2>지금 바로 교통-DAY에 참여하세요!</h2>
             <p>교통을 사랑하는 당신에게 잊지 못할 경험을 선사할 거예요.</p>
-            <a href="login_signup.html?tab=register" class="btn btn-light btn-lg mt-3">무료 회원가입 및 예약 <i class="bi bi-chevron-right"></i></a>
+            <a href="javascript:void(0)" onclick="navigateTo('login_signup', 'tab=register')" class="btn btn-light btn-lg mt-3">무료 회원가입 및 예약 <i class="bi bi-chevron-right"></i></a>
         </div>
     </section>
 
-    <!-- 푸터 -->
     <footer>
         <div class="container">
             <p>&copy; 2025 교통-DAY. All rights reserved.</p>
@@ -249,60 +185,48 @@
     <!-- 부트스트랩 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // 로그인 상태 확인 및 버튼 업데이트
-            updateAuthButtons();
-
-            // 로그아웃 버튼 클릭 이벤트
-            // 'authButtons' div 내에 있는 'logoutBtn'에 이벤트 리스너를 직접 연결
-            const logoutBtnElement = document.getElementById('logoutBtn');
-            if (logoutBtnElement) { // 버튼이 존재할 경우에만 이벤트 리스너 추가
-                logoutBtnElement.addEventListener('click', function() {
-                    localStorage.removeItem('loggedInUserId'); // 로컬 스토리지에서 사용자 ID 제거
-                    localStorage.removeItem('loggedInUserNickname'); // 닉네임도 지워줘요.
-                    localStorage.removeItem('loggedInUserAdminStatus'); // 관리자 상태도 지워줘요.
-                    alert('로그아웃 되었습니다.');
-                    updateAuthButtons(); // 버튼 상태 업데이트
-                    location.reload(); // 페이지 새로고침
-                });
-            }
-
-            // 로그인/회원가입/마이페이지 버튼 이벤트
-            document.getElementById('loginBtn').addEventListener('click', function() {
-                window.location.href = 'login_signup.html';
-            });
-            document.getElementById('signupBtn').addEventListener('click', function() {
-                window.location.href = 'login_signup.html?tab=register';
-            });
-            document.getElementById('mypageBtn').addEventListener('click', function() {
-                window.location.href = 'mypage.html';
-            });
-        });
-
+        // updateAuthButtons 함수 정의
         function updateAuthButtons() {
             const loggedInUserId = localStorage.getItem('loggedInUserId');
+            
             const loginBtn = document.getElementById('loginBtn');
             const signupBtn = document.getElementById('signupBtn');
             const mypageBtn = document.getElementById('mypageBtn');
             const logoutBtn = document.getElementById('logoutBtn');
 
-            // 버튼 요소가 모두 있는지 확인 후 처리
             if (loginBtn && signupBtn && mypageBtn && logoutBtn) {
-                if (loggedInUserId) { // 로그인 되어 있다면
-                    loginBtn.classList.add('d-none'); // 로그인 버튼 숨기기
-                    signupBtn.classList.add('d-none'); // 회원가입 버튼 숨기기
-                    mypageBtn.classList.remove('d-none'); // 마이페이지 버튼 보이기
-                    logoutBtn.classList.remove('d-none'); // 로그아웃 버튼 보이기
-                } else { // 로그인 되어 있지 않다면
-                    loginBtn.classList.remove('d-none'); // 로그인 버튼 보이기
-                    signupBtn.classList.remove('d-none'); // 회원가입 버튼 보이기
-                    mypageBtn.classList.add('d-none'); // 마이페이지 버튼 숨기기
-                    logoutBtn.classList.add('d-none'); // 로그아웃 버튼 숨기기
+                if (loggedInUserId) { 
+                    loginBtn.classList.add('d-none');
+                    signupBtn.classList.add('d-none');
+                    mypageBtn.classList.remove('d-none');
+                    logoutBtn.classList.remove('d-none');
+                } else { 
+                    loginBtn.classList.remove('d-none');
+                    signupBtn.classList.remove('d-none');
+                    mypageBtn.classList.add('d-none');
+                    logoutBtn.classList.add('d-none');
                 }
             } else {
                 console.error("인증 관련 버튼 요소를 찾을 수 없습니다.");
             }
         }
+        
+        // DOMContentLoaded 이벤트 리스너: 페이지 로드 후 실행
+        document.addEventListener('DOMContentLoaded', function() {
+            updateAuthButtons(); // 초기 로그인 상태에 따라 버튼 업데이트
+
+            // 로그아웃 버튼 이벤트 리스너 추가
+            const logoutBtnElement = document.getElementById('logoutBtn');
+            if (logoutBtnElement) { 
+                logoutBtnElement.addEventListener('click', function() {
+                    localStorage.removeItem('loggedInUserId'); 
+                    localStorage.removeItem('loggedInUserNickname'); 
+                    localStorage.removeItem('loggedInUserAdminStatus');
+                    alert('로그아웃 되었습니다.');
+                    navigateTo('index'); // 로그아웃 후 홈으로 이동
+                });
+            }
+        });
     </script>
 </body>
 </html>
