--- a/소개.html
+++ b/소개.html
@@ -35,64 +35,168 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- 깃허브 코드 내용에서 최대한 바꾸지 않기 위해, 스크립트 위치만 옮겼습니다 -->
+    <script>
+      // **여기에 위에서 복사한 배포된 Apps Script 웹 앱의 "/exec" URL을 붙여넣으세요!**
+      const APPS_SCRIPT_API_URL = 'YOUR_APPS_SCRIPT_EXEC_URL_HERE'; 
+
+      function navigateTo(page, params = '') {
+          let url = 'https://sgwcrong.github.io/trafficday/'; 
+          switch (page) {
+              case 'index': url += 'index.html'; break;
+              case 'about': url += 'about.html'; break;
+              case 'login_signup': url += 'login_signup.html'; break;
+              case 'mypage': url += 'mypage.html'; break;
+              case 'admin': url += 'admin.html'; break;
+              default: console.error('알 수 없는 페이지:', page); return;
+          }
+          if (params) { url += '?' + params; }
+          window.location.href = url;
+      }
+
+      async function callAppsScript(functionName, data = {}) {
+          try {
+              const response = await fetch(APPS_SCRIPT_API_URL, {
+                  method: 'POST', headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ functionName, data })
+              });
+              return await response.json();
+          } catch (error) {
+              console.error('Apps Script API 호출 중 오류 발생:', error);
+              throw new Error('서버와 통신하는 중 오류가 발생했습니다. (' + error.message + ')');
+          }
+      }
+    </script>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">교통-DAY</a>
+            <a class="navbar-brand" href="javascript:void(0)" onclick="navigateTo('index')">교통-DAY</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">소개</a>
+                        <a class="nav-link" href="javascript:void(0)" onclick="navigateTo('index')">홈</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="javascript:void(0)" onclick="navigateTo('about')">소개</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            방문 예약
+                        <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            행사 정보
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="부산발할로윈행방문예약폼.html">부산발 할로윈행</a></li>
-                            <li><a class="dropdown-item" href="#">서비스 2</a></li>
+                            <li><a class="dropdown-item" href="#">주요 프로그램</a></li> 
+                            <li><a class="dropdown-item" href="#">장소 및 시간</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">기타 서비스</a></li>
+                            <li><a class="dropdown-item" href="#">교통-DAY 웹툰</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">연락처</a>
+                        <a class="nav-link" href="#">커뮤니티</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">검색</button>
-                </form>
+                <div class="d-flex" id="authButtons">
+                    <!-- 로그인 상태에 따라 이 버튼들이 제어됨 -->
+                    <button id="loginBtn" class="btn btn-outline-light me-2 d-none" onclick="navigateTo('login_signup')">로그인</button>
+                    <button id="signupBtn" class="btn btn-primary d-none" onclick="navigateTo('login_signup', 'tab=register')">회원가입</button>
+                    <button id="mypageBtn" class="btn btn-outline-light me-2 d-none" onclick="navigateTo('mypage')">마이페이지</button>
+                    <button id="logoutBtn" class="btn btn-danger d-none">로그아웃</button>
+                </div>
             </div>
         </div>
     </nav>
 
-    <!-- 히어로 섹션 시작 -->
     <header class="hero-section">
         <div class="container">
-            <h1 class="display-3">교통-DAY의 환상적인 웹사이트에 오신 것을 환영합니다!</h1>
+            <h1 class="display-4">저희 교통-DAY에 대해 알려드릴게요!</h1>
             <p class="lead">
-             교통 덕질 비영리 단체, 교통-DAY입니다.
-             대표: 교통덕후 곰돌맨 @Bearman_ENTP
+                교통덕후들의 열정으로 만들어가는 최고의 축제입니다.
             </p>
-            <a href="#" class="btn btn-primary btn-lg">지금 시작하기</a>
-            <!-- CTA 버튼 -->
         </div>
     </header>
-    <!-- 히어로 섹션 끝 -->
 
-    <div class="container mt-5">
-        <h2>여기에 다른 섹션 내용이 이어집니다.</h2>
-        <p>히어로 섹션이 잘 구현되었는지 확인해보세요!</p>
-        <p>이어서 웹사이트의 다양한 정보나 기능을 추가할 수 있습니다.</p>
+    <div class="container about-content">
+        <div class="row">
+            <div class="col-lg-8">
+                <h2>환영합니다!</h2>
+                <p>
+                    저희 '교통-DAY'는 교통에 대한 깊은 애정과 지식을 가진 모든 분들을 위한 특별한 행사입니다. 
+                    주인님께서 꿈꾸시는 모든 교통 관련 아이디어를 나누고, 새로운 지식을 얻으며, 잊지 못할 경험을 선사하는 것이 저희의 목표입니다.
+                </p>
+
+                <h2>저희의 미션</h2>
+                <p>
+                    정보를 쉽고 즐겁게 전달하고, 교통 분야의 다양한 사람들을 연결하여 시너지를 창출하는 것이 저희의 미션입니다. 
+                    참가자 모두가 만족하고 성장할 수 있는 지속 가능한 커뮤니티와 행사를 만들어갈 거예요.
+                </p>
+
+                <h2>연혁</h2>
+                <p>
+                    * 2024년 1월: 교통-DAY 행사 구상 시작<br>
+                    * 2024년 5월: 첫 웹사이트 기본 구조 HTML 코드 작성<br>
+                    * 2025년 9월: 드롭다운 메뉴 및 히어로 섹션, 로그인/회원가입 기능 추가<br>
+                    * (여기에 주인님의 중요한 발자취를 추가해보세요!)
+                </p>
+
+                <h2>운영자 (주인님) 소개</h2>
+                <p>
+                    '교통-DAY' 웹사이트의 개발과 운영을 맡고 있는 <span style="font-weight: bold;">주인님</span>은 <span style="font-weight: bold;">교통관찰</span>을 취미로 삼고 있으며, <span style="font-weight: bold;">K-pop</span>에 깊은 관심을 가지고 있는 고등학생입니다. 
+                    <span style="font-weight: bold;">웹사이트 개발</span>에도 열정을 쏟고 있으며, 항상 새로운 기술과 아이디어에 도전하는 분이시죠!
+                </p>
+            </div>
+            <div class="col-lg-4 text-center">
+                <img src="https://via.placeholder.com/400x400/FFD700/000000?text=Traffic-DAY" alt="About Us" class="img-fluid rounded shadow">
+                <p class="mt-3 text-muted">행사의 상징적인 이미지를 넣어보세요!</p>
+            </div>
+        </div>
     </div>
-
-    <!-- 부트스트랩 JS 링크 (</body> 태그 직전에 위치하는 것이 좋아요!) -->
+    
+    <!-- 부트스트랩 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script>
+        // updateAuthButtons 함수 (공통 기능)
+        function updateAuthButtons() {
+            const loggedInUserId = localStorage.getItem('loggedInUserId');
+            
+            const loginBtn = document.getElementById('loginBtn');
+            const signupBtn = document.getElementById('signupBtn');
+            const mypageBtn = document.getElementById('mypageBtn');
+            const logoutBtn = document.getElementById('logoutBtn');
+
+            if (loginBtn && signupBtn && mypageBtn && logoutBtn) {
+                if (loggedInUserId) { 
+                    loginBtn.classList.add('d-none');
+                    signupBtn.classList.add('d-none');
+                    mypageBtn.classList.remove('d-none');
+                    logoutBtn.classList.remove('d-none');
+                } else { 
+                    loginBtn.classList.remove('d-none');
+                    signupBtn.classList.remove('d-none');
+                    mypageBtn.classList.add('d-none');
+                    logoutBtn.classList.add('d-none');
+                }
+            } else {
+                console.error("인증 관련 버튼 요소를 찾을 수 없습니다.");
+            }
+        }
+
+        // DOMContentLoaded 이벤트 리스너: 페이지 로드 후 실행
+        document.addEventListener('DOMContentLoaded', function() {
+            updateAuthButtons(); // 초기 로그인 상태에 따라 버튼 업데이트
+
+            // 로그아웃 버튼 이벤트 리스너 추가
+            const logoutBtnElement = document.getElementById('logoutBtn');
+            if (logoutBtnElement) { 
+                logoutBtnElement.addEventListener('click', function() {
+                    localStorage.removeItem('loggedInUserId'); 
+                    localStorage.removeItem('loggedInUserNickname'); 
+                    localStorage.removeItem('loggedInUserAdminStatus');
+                    alert('로그아웃 되었습니다.');
+                    navigateTo('index'); // 로그아웃 후 홈으로 이동
+                });
+            }
+        });
+    </script>
 </body>
-
 </html>
-
-
