--- a/login_signup.html
+++ b/login_signup.html
@@ -37,6 +37,37 @@
     </style>
 </head>
 <body>
+    <script>
+      // **여기에 위에서 복사한 배포된 Apps Script 웹 앱의 "/exec" URL을 붙여넣으세요!**
+      const APPS_SCRIPT_API_URL = 'https://script.google.com/macros/s/AKfycbyKZYIL9xSwe-KVA09QONAeqMXMVoqboSnhY709NpU8lqld-di0qYMxToN9ZcCU32qm/exec'; 
+
+      function navigateTo(page, params = '') {
+          let url = 'https://sgwcrong.github.io/trafficday/'; 
+          switch (page) {
+              case 'index': url += 'index.html'; break;
+              case 'about': url += 'about.html'; break;
+              case 'login_signup': url += 'login_signup.html'; break;
+              case 'mypage': url += 'mypage.html'; break;
+              case 'admin': url += 'admin.html'; break;
+              default: console.error('알 수 없는 페이지:', page); return;
+          }
+          if (params) { url += '?' + params; }
+          window.location.href = url;
+      }
+
+      async function callAppsScript(functionName, data = {}) {
+          try {
+              const response = await fetch(APPS_SCRIPT_API_URL, {
+                  method: 'POST', headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ functionName, data })
+              });
+              return await response.json();
+          } catch (error) {
+              console.error('Apps Script API 호출 중 오류 발생:', error);
+              throw new Error('서버와 통신하는 중 오류가 발생했습니다. (' + error.message + ')');
+          }
+      }
+    </script>
     <div class="container">
         <ul class="nav nav-tabs mb-4" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -60,6 +91,7 @@
                         <input type="password" class="form-control" id="loginPassword" name="password" required>
                     </div>
                     <button type="submit" class="btn btn-primary w-100 mb-2">로그인</button>
+                    <button type="button" class="btn btn-outline-secondary w-100" onclick="navigateTo('index')">취소</button>
                 </form>
             </div>
 
@@ -102,6 +134,7 @@
                         <div class="form-text">재설정 시 필요한 보안 질문에 대한 답변입니다.</div>
                     </div>
                     <button type="submit" class="btn btn-primary w-100 mb-2">회원가입</button>
+                    <button type="button" class="btn btn-outline-secondary w-100" onclick="navigateTo('index')">취소</button>
                 </form>
             </div>
         </div>
@@ -111,6 +144,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+            // URL 파라미터 확인 (예: ?tab=register)
             const urlParams = new URLSearchParams(window.location.search);
             if (urlParams.get('tab') === 'register') {
                 const registerTab = new bootstrap.Tab(document.getElementById('register-tab'));
@@ -118,7 +152,7 @@
             }
         });
 
-        document.getElementById('registerForm').addEventListener('submit', function(e) {
+        document.getElementById('registerForm').addEventListener('submit', async function(e) { 
             e.preventDefault();
 
             const password = document.getElementById('regPassword').value;
@@ -135,28 +169,27 @@
                 nickname: document.getElementById('nickname').value,
                 id: document.getElementById('regId').value,
                 email: document.getElementById('email').value,
-                password: password,
+                password: password, 
                 securityCode: document.getElementById('securityCode').value
             };
 
-            google.script.run
-                .withSuccessHandler(function(response) {
-                    if (response.success) {
-                        alert(response.message + ' 환영합니다, ' + response.id + '님!');
-                        const loginTab = new bootstrap.Tab(document.getElementById('login-tab'));
-                        loginTab.show();
-                        document.getElementById('registerForm').reset();
-                    } else {
-                        alert('회원가입 실패: ' + response.message);
-                    }
-                })
-                .withFailureHandler(function(error) {
-                    alert('서버 오류 발생: ' + error.message);
-                })
-                .processRegister(formData);
+            try {
+                const response = await callAppsScript('processRegister', formData);
+                
+                if (response.success) {
+                    alert(response.message + ' 환영합니다, ' + response.id + '님!');
+                    const loginTab = new bootstrap.Tab(document.getElementById('login-tab'));
+                    loginTab.show(); 
+                    document.getElementById('registerForm').reset();
+                } else {
+                    alert('회원가입 실패: ' + response.message);
+                }
+            } catch (error) {
+                alert('서버 통신 오류 발생: ' + error.message);
+            }
         });
 
-        document.getElementById('loginForm').addEventListener('submit', function(e) {
+        document.getElementById('loginForm').addEventListener('submit', async function(e) { 
             e.preventDefault();
 
             const formData = {
@@ -164,22 +197,21 @@
                 password: document.getElementById('loginPassword').value
             };
 
-            google.script.run
-                .withSuccessHandler(function(response) {
-                    if (response.success) {
-                        alert(response.message + ' 안녕하세요, ' + response.user.nickname + '님!');
-                        localStorage.setItem('loggedInUserId', response.user.id);
-                        localStorage.setItem('loggedInUserNickname', response.user.nickname); // 닉네임 저장
-                        localStorage.setItem('loggedInUserAdminStatus', response.user.adminStatus); // 관리자 여부 저장
-                        window.location.href = 'index.html'; // 메인 페이지로 이동
-                    } else {
-                        alert('로그인 실패: ' + response.message);
-                    }
-                })
-                .withFailureHandler(function(error) {
-                    alert('서버 오류 발생: ' + error.message);
-                })
-                .processLogin(formData);
+            try {
+                const response = await callAppsScript('processLogin', formData);
+
+                if (response.success) {
+                    alert(response.message + ' 안녕하세요, ' + response.user.nickname + '님!');
+                    localStorage.setItem('loggedInUserId', response.user.id);
+                    localStorage.setItem('loggedInUserNickname', response.user.nickname);
+                    localStorage.setItem('loggedInUserAdminStatus', response.user.adminStatus);
+                    navigateTo('index'); 
+                } else {
+                    alert('로그인 실패: ' + response.message);
+                }
+            } catch (error) {
+                alert('서버 통신 오류 발생: ' + error.message);
+            }
         });
     </script>
 </body>
