--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
     <header class="hero-section">
         <div class="container">
-            <h1 class="display-3">교통-DAY: 교통덕후들을 위한 성대한 축제!</h1>
+            <h1 class="display-3">교통-DAY: 교통덕후들을 위한 성대한 축제!(사이트 점검 중 입니다!)</h1>
             <p class="lead">
                 기차, 버스, 지하철... 이 모든 것을 사랑하는 당신을 위한 단 하루의 특별한 행사!
-                다양한 체험과 정보, 그리고 교통덕후 친구들을 만나보세요!
+                다양한 체험과 정보, 그리고 교통덕후 친구들을 만나보세요!(사이트 점검 중!)
             </p>
             <a href="javascript:void(0)" onclick="navigateTo('lookup')" class="btn btn-primary btn-lg">지금 바로 조회하기</a>
         </div>
@@ -234,3 +234,4 @@
     </script>
 </body>
 </html>
+
